Adjusted calculator layout, spacing, and scaling to enhance usability and appearance on tablet devices. Improved responsiveness and touch-friendly element sizing to ensure a better user experience on larger screens.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -214,6 +214,16 @@ header {
     
     }
 
+    .table-header {
+    display: flex !important;
+    justify-content: center;
+    width: 150%;
+    }
+
+    .tabele-head {
+    display: flex !important;
+
+    }
     .responsive-table tr {
     display: block;
     /*width: 100%;*/
